<resources>
    <string name="app_name" translatable="false">Recipe App</string>
    <string name="nav_start">Start</string>
    <string name="nav_search">Search</string>
    <string name="nav_favourites">Favourites</string>
    <string name="title_start">Select a category</string>
    <string name="title_search">Search for a meal</string>
    <string name="title_favourites">Favourite meals</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_description">Description</string>
    <string name="visual_meal">Meal</string>
    <string name="visual_ingredient">Ingredient</string>
    <string name="placeholder_category">Category</string>
    <string name="placeholder_area">Area</string>
    <string name="visual_area">Location</string>
    <string name="visual_category">Hashtag</string>
    <string name="button_random">Surprise</string>
    <string name="button_search">Search</string>
    <string name="checkbox_ingredient">Ingredient</string>
    <string name="button_youtube">Video</string>
</resources>