<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/meal_image"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:contentDescription="@string/visual_meal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/meal_area_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/meal_name"
                app:layout_constraintTop_toBottomOf="@+id/meal_name"
                app:srcCompat="@drawable/ic_location"
                android:contentDescription="@string/visual_area" />

            <ImageView
                android:id="@+id/meal_category_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/meal_name"
                app:layout_constraintTop_toBottomOf="@+id/meal_area_icon"
                app:srcCompat="@drawable/ic_tag"
                android:contentDescription="@string/visual_category" />

            <TextView
                android:id="@+id/meal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/placeholder_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/meal_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/meal_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/placeholder_area"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/meal_area_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/meal_area_icon"
                app:layout_constraintTop_toTopOf="@+id/meal_area_icon"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/meal_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/placeholder_category"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/meal_category_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/meal_category_icon"
                app:layout_constraintTop_toTopOf="@+id/meal_category_icon"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>